@@ -1,3 +1,4 @@
+RPAL: started RPALAnalysisSummary
 RPAL: cut over to new directory structure
 # 00.00.35 (63581) Apr 18, 2012
 Show summary text
